# smart_home

./: .gitignore  AGENTS.md  Cargo.toml  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 20260226000000_init.sql
backend/src/: config.rs  lib.rs  main.rs  reading_cache.rs  response_store.rs
backend/src/api/: dto.rs  handlers.rs  mod.rs
backend/src/control/: service.rs
backend/src/db/: models.rs
backend/src/sensors/: service.rs
backend/src/tuya/: mod.rs  models.rs
deploy/: raspberry-pi.md  smart-home.service
migrations/: 20260226000000_init.sql
src/: config.rs  main.rs  reading_cache.rs
src/api/: dto.rs  errors.rs  handlers.rs  mod.rs
src/control/: mod.rs  service.rs
src/db/: mod.rs  models.rs
src/sensors/: mod.rs  service.rs
